# cover-ratio-maximization

./: README.md
figures/: Untitled.m  Untitled2.asv  Untitled2.m  Untitled4.asv  Untitled4.m  Untitled5.m  adv_exam_user.m  advance_exam.m  advance_exam2.m  base.m  base_exam2_nc.fig  base_example.m  base_example1.fig  change.m  covex.m  non_dominate.m  prefer.m
presentation/: 20200207_Likeming_coverRatioMaximization.pptx  20200214_Likeming_CoverRatioMaximization.pptx  20200221_Likeming_CoverRatioMaximization.pptx  20200228_Likeming_CoverRatioMaximization.pptx  20200313_Likeming_CoverRatioMaximization.pptx  20200327_Likeming_CoverRatioMaximization.pptx  20200403_Likeming_coverRatioMaximization.pptx  20200605_Likeming_coverRatioMaximization.pptx  20200626_Likeming_coverRatioMaximization.pptx  20200717_Likeming_weeklyReport.pptx  220_223.txt  5_8_kspr_exp_pre_note.txt  Cover Ratio Maximization.pptm  Cover Ratio Maximization.pptx  Cover Ratio Maximization_2020_4_24.pptx  Creation Cost Minimization.pptx  Default setting.docx  K-Hit Query_2019_12_22.pptx  cmds.txt  interim-layout(backup).docx  interim_report(backup).docx  interim_report.docx  note2.txt  note3.txt  南方科技大学毕业设计（论文）中期审批李可明.docx  南方科技大学毕业设计（论文）自查表-李可明.docx  对毕设课题的理解.docx  毕业设计中期报告-李可明.pptx  毕设进度3.docx  （1）本科生毕业设计（论文）选题申报表 (1).docx  （2）本科生毕业设计（论文）任务书 (1).docx  （3）毕业设计（论文）开题报告 (1).docx
python_visual_code/: .eps  .git-credentials  .gitconfig  .python_history  2dexam.ipynb  (+30 more)
test_cgal/: CMakeLists.txt  main.cpp  p10_4d  p2_2d.txt  p30d4.txt  summit_job.sh  triangulation1.cpp  triangulation1.hpp  triangulation2.cpp
(+66 files in other folders)
